[gd_scene load_steps=3 format=3 uid="uid://bv4tyih8540kx"]

[ext_resource type="Script" uid="uid://ou8y2gpvrm3l" path="res://scripts/shop_ui.gd" id="1_6hffh"]

[sub_resource type="ButtonGroup" id="ButtonGroup_6hffh"]

[node name="ShopUI" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.5
offset_top = -60.0
offset_right = 89.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hffh")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ShopTitle" type="Label" parent="MainVBox"]
layout_mode = 2
text = "Shop"
horizontal_alignment = 1

[node name="Items" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2

[node name="Item1" type="Button" parent="MainVBox/Items"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_6hffh")
text = "Item 1"

[node name="Item2" type="Button" parent="MainVBox/Items"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_6hffh")
text = "Item 2"

[node name="Item3" type="Button" parent="MainVBox/Items"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_6hffh")
text = "Item 3"

[node name="ItemDescription" type="Label" parent="MainVBox"]
layout_mode = 2
text = "Item description"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="MainVBox/HBoxContainer"]
layout_mode = 2
text = "Buy"

[node name="CancelButton" type="Button" parent="MainVBox/HBoxContainer"]
layout_mode = 2
text = "Cancel"
